--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -154,9 +154,29 @@
 
     <div class="panel col-md-10 col-md-offset-1 panel-body">
         <h1 class="about-title">El Equipo</h1>
-
+        <p class="text-soft about-description">
+            Nuestro equipo est&aacute; formado por j&oacute;venes desarrolladores del software, todos ellos con competencias
+            y experiencia en el desarrollo de aplicaciones software.
+            <br>
+            En cont&iacute;nua expansi&oacute;n, acogemos siempre a nuevos miembros que permitan aportar un nuevo
+            punto de vista que nos permita afrontar los problemas de formas que antes no pod&iacute;mos.
+            <br>
+            &quot;La uni&oacute;n hace la fuerza&quot;.
+            <br><br>
+            Movidos por una inquietud constante experimentamos cont&iacute;nuamente con nuevas tecnolog&iacute;as para
+            mejorar como ingenieros y desarrolladores del software y basamos nuestra filosof&iacute;a de trabajo en
+            metodolog&iacute;as &aacute;giles, lo que nos permite crear nuevos productos velozmente, din&aacute;micamente
+            y perfectamente adaptados a los cont&iacute;nuos cambios.
+            <br><br>
+            Con una curiosidad por los avances tecnol&oacute;gicos y exigencia por mejorar innatos nuestro objetivo es el de
+            elaborar las aplicaciones m&aacute;s novedosas, &uacute;tiles, intuitivas y con el aspecto gr&aacute;fico
+            m&aacute;s cuidado del mercado: siempre orientados a satisfacer las necesidades de nuestros clientes y usuarios
+            ofreciendo la mayor calidad.
+        </p>
+        <hr class="hr-eathub">
+        <h2 class="about-title">Miembros</h2>
         <div class="row">
-            <div class="col-md-4 panel-about-container">
+            <div class="col-md-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/sergiog.png' %}"> </img>
                 </div>
@@ -165,9 +185,14 @@
 
                     <div class="team-more-title">Jefe de proyecto</div>
                     <div class="team-more-title">sergaralo@eathub.me</div>
+                    <br>
+                    <a href="http://es.linkedin.com/pub/sergio-garcia-alonso/48/979/158/">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
-            <div class="col-md-4 panel-about-container">
+
+            <div class="col-md-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/david.png' %}"> </img>
                 </div>
@@ -176,9 +201,13 @@
 
                     <div class="team-more-title">Desarrollador</div>
                     <div class="team-more-title">jesgonbel@eathub.me</div>
+                    <br>
+                    <a href="http://es.linkedin.com/pub/jes%C3%BAs-david-gonz%C3%A1lez-belda/72/88/b1a/">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
-            <div class="col-md-4 panel-about-container">
+            <div class="col-md-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/arturo.png' %}"> </img>
                 </div>
@@ -187,12 +216,16 @@
 
                     <div class="team-more-title">Analista y tester</div>
                     <div class="team-more-title">artjimlop@eathub.me</div>
+                    <br>
+                    <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fpub%2Farturo-jim%25C3%25A9nez-l%25C3%25B3pez%2F89%2Fa8%2F568&sa=D&sntz=1&usg=AFQjCNGUrhWC873pos0fdrLUnYC8u8-wMw">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-4 panel-about-container">
+            <div class="col-md-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/antonio.png' %}"> </img>
                 </div>
@@ -201,9 +234,13 @@
 
                     <div class="team-more-title">Analista y tester</div>
                     <div class="team-more-title">antleocar1@eathub.me</div>
+                    <br>
+                    <a href="http://es.linkedin.com/pub/antonio-león-carrillo/99/199/335/">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
-            <div class="col-md-4 panel-about-container">
+            <div class="col-md-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/juanma.png' %}"> </img>
                 </div>
@@ -212,9 +249,14 @@
 
                     <div class="team-more-title">Desarrollador</div>
                     <div class="team-more-title">jualoppaz@eathub.me</div>
+                    <br>
+                    <a href="http://es.linkedin.com/pub/juan-manuel-lopez-pazos/63/469/4a9/">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
-            <div class="col-md-4 panel-about-container">
+
+            <div class="col-md-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/sergior.png' %}"> </img>
                 </div>
@@ -223,12 +265,16 @@
 
                     <div class="team-more-title">Desarrollador</div>
                     <div class="team-more-title">serrodcal@eathub.me</div>
+                    <br>
+                    <a href="https://www.linkedin.com/pub/sergio-rodr%C3%ADguez-calvo/97/b79/38b">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-4 col-md-offset-4 panel-about-container">
+            <div class="col-md-4 col-md-offset-4 panel-about-container corporative-team-more-parent">
                 <div class="group-div-image">
                     <img class="team-image" src="{% static 'webapp/image/rafa.png' %}"> </img>
                 </div>
@@ -237,15 +283,15 @@
 
                     <div class="team-more-title">L&iacute;der del grupo de desarrollo</div>
                     <div class="team-more-title">rafvazsan@eathub.me</div>
+                    <br>
+                    <a href="https://www.linkedin.com/in/sloydev">
+                        <img class="linkedin-link-image img-rounded" src="{% static 'webapp/image/linkedin-button-wide-blue.png' %}"> </img>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 
-
-    <div class="panel col-md-10 col-md-offset-1 panel-body">
-
-    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
