--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -148,39 +148,254 @@
 
         </div>
 
-    <div class="nuestro-equipo">
+    <div class="nuestro-equipo text-center">
 
         <div class="row">
 
             <h3 class="titulo text-center">Nuestro equipo</h3>
 
-            <div class="col-md-4 card">
+            <br />
+            <br />
 
-            </div>
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
 
-            <div class="col-md-4 card">
+                <div class="row">
 
-            </div>
+                    <div class="col-md-7">
 
-            <div class="col-md-4 card">
+                        <!-- Title -->
 
-            </div>
+                        <h3 class="titulo">Sergio Garc&iacute;a</h3>
 
-            <div class="col-md-4 card">
+                        <!-- Content -->
 
-            </div>
+                        <p class="rol">Jefe de proyecto y portavoz</p>
 
-            <div class="col-md-4 card">
+                        <p class="email-white">sergaralo@eathub.me</p>
 
-            </div>
+                    </div>
 
-            <div class="col-md-4 card">
+                    <!-- Image from right -->
 
-            </div>
+                    <div class="col-md-5">
 
-            <div class="col-md-4 card">
+                        <img class="border" src="{% static 'webapp/image/sergiog.png' %}">
 
-            </div>
+                    </div>
+
+                </div>
+
+            </section>
+
+            <!-- END FIRST SECTION ############################################### -->
+
+            <br />
+            <br />
+            <hr />
+
+            <!-- SECOND SECTION ############################################### -->
+
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
+
+                <div class="row">
+
+                    <!-- Image from left -->
+
+                    <div class="col-md-5">
+
+                        <img class="border" src="{% static 'webapp/image/david.png' %}">
+
+                    </div>
+
+                    <div class="col-md-7">
+
+                        <!-- Title -->
+
+                        <h3 class="titulo">David Gonz&aacute;lez</h3>
+
+                        <!-- Content -->
+
+                        <p class="rol">Desarrollador</p>
+
+                        <p class="email-white">jesgonbel@eathub.me</p>
+
+                    </div>
+
+
+
+                </div>
+
+            </section>
+
+            <br />
+            <br />
+            <hr />
+
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
+
+                <div class="row">
+
+                    <div class="col-md-7">
+
+                        <!-- Title -->
+
+                        <h3 class="titulo">Arturo Jim&eacute;nez</h3>
+
+                        <!-- Content -->
+
+                        <p class="rol">Analista, Tester y Secretario</p>
+
+                        <p class="email-white">artjimlop@eathub.me</p>
+
+                    </div>
+
+                    <!-- Image from right -->
+
+                    <div class="col-md-5">
+
+                        <img class="border" src="{% static 'webapp/image/arturo.png' %}">
+
+                    </div>
+            </section>
+
+            <br />
+            <br />
+            <hr />
+
+            <!-- SECOND SECTION ############################################### -->
+
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
+
+                <div class="row">
+
+                    <!-- Image from left -->
+
+                    <div class="col-md-5">
+
+                        <img class="border" src="{% static 'webapp/image/antonio.png' %}">
+
+                    </div>
+
+                    <div class="col-md-7">
+
+                        <!-- Title -->
+
+                        <h3 class="titulo">Antonio Le&oacute;n</h3>
+
+                        <!-- Content -->
+
+                        <p class="rol">Analista y Tester</p>
+
+                        <p class="email-white">antleocar@eathub.me</p>
+
+                    </div>
+
+
+
+                </div>
+
+            </section>
+
+             <br />
+            <br />
+            <hr />
+
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
+
+                <div class="row">
+
+                    <div class="col-md-7">
+
+                        <!-- Title -->
+
+                        <h3 class="titulo">Juan Manuel L&oacute;pez</h3>
+
+                        <!-- Content -->
+
+                        <p class="rol">Desarrollador</p>
+
+                        <p class="email-white">jualoppaz@eathub.me</p>
+
+                    </div>
+
+                    <!-- Image from right -->
+
+                    <div class="col-md-5">
+
+                        <img class="border" src="{% static 'webapp/image/juanma.png' %}">
+
+                    </div>
+            </section>
+
+            <br />
+            <br />
+            <hr />
+
+            <!-- SECOND SECTION ############################################### -->
+
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
+
+                <div class="row">
+
+                    <!-- Image from left -->
+
+                    <div class="col-md-5">
+
+                        <img class="border" src="{% static 'webapp/image/sergior.png' %}">
+
+                    </div>
+
+                    <div class="col-md-7">
+
+                        <!-- Title -->
+
+                        <h3 class="titulo">Sergio Rodr&iacute;guez</h3>
+
+                        <!-- Content -->
+
+                        <p class="rol">Desarrollador</p>
+
+                        <p class="email-white">serrodcal@eathub.me</p>
+
+                    </div>
+
+
+
+                </div>
+
+            </section>
+
+             <br />
+            <br />
+
+            <hr />
+
+            <section class="cbp-so-section cbp-so-init cbp-so-animate">
+
+                <div class="row">
+
+                    <div class="col-md-7">
+
+                        <!-- Title -->
+
+                        <h3 class="titulo">Rafael V&aacute;zquez</h3>
+
+                        <!-- Content -->
+
+                        <p class="rol">Jefe de desarrollo</p>
+
+                        <p class="email-white">rafvazsan@eathub.me</p>
+
+                    </div>
+
+                    <!-- Image from right -->
+
+                    <div class="col-md-5">
+
+                        <img class="border" src="{% static 'webapp/image/rafa.png' %}">
+
+                    </div>
+            </section>
 
         </div>
 
