Prueba de color en las fotos.

--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -12,7 +12,6 @@
     <link href="{% static 'webapp/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/corporative.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
@@ -179,7 +178,7 @@
 
                     <div class="col-md-5">
 
-                        <img class="border" src="{% static 'webapp/image/sergiog.png' %}">
+                        <img class="border" src="{% static 'webapp/image/sergiog2.png' %}">
 
                     </div>
 
@@ -272,7 +271,7 @@
 
                     <div class="col-md-5">
 
-                        <img class="border" src="{% static 'webapp/image/antonio.png' %}">
+                        <img class="border" src="{% static 'webapp/image/antonio2.png' %}">
 
                     </div>
 
