Añaido icono y enlaces de linkedin. Cambio de color de las fotografias.

--- a/templates/webapp/corporative.html
+++ b/templates/webapp/corporative.html
@@ -172,13 +172,15 @@
 
                         <p class="email-white">sergaralo@eathub.me</p>
 
+                        <p><a href="es.linkedin.com/pub/sergio-garcia-alonso/48/979/158/"><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
+
                     </div>
 
                     <!-- Image from right -->
 
                     <div class="col-md-5">
 
-                        <img class="border" src="{% static 'webapp/image/sergiog2.png' %}">
+                        <img class="border" src="{% static 'webapp/image/sergiog.png' %}">
 
                     </div>
 
@@ -218,6 +220,8 @@
 
                         <p class="email-white">jesgonbel@eathub.me</p>
 
+                        <p><a href=""><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
+
                     </div>
 
 
@@ -246,6 +250,8 @@
 
                         <p class="email-white">artjimlop@eathub.me</p>
 
+                        <p><a href="es.linkedin.com/pub/arturo-jiménez-lópez/89/a8/568"><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
+
                     </div>
 
                     <!-- Image from right -->
@@ -271,7 +277,7 @@
 
                     <div class="col-md-5">
 
-                        <img class="border" src="{% static 'webapp/image/antonio2.png' %}">
+                        <img class="border" src="{% static 'webapp/image/antonio.png' %}">
 
                     </div>
 
@@ -286,6 +292,8 @@
                         <p class="rol">Analista y Tester</p>
 
                         <p class="email-white">antleocar@eathub.me</p>
+
+                        <p><a href=""><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
 
                     </div>
 
@@ -314,6 +322,8 @@
                         <p class="rol">Desarrollador</p>
 
                         <p class="email-white">jualoppaz@eathub.me</p>
+
+                        <p><a href="es.linkedin.com/pub/juan-manuel-lopez-pazos/63/469/4a9"><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
 
                     </div>
 
@@ -356,6 +366,8 @@
 
                         <p class="email-white">serrodcal@eathub.me</p>
 
+                        <p><a href="es.linkedin.com/pub/sergio-rodríguez-calvo/97/b79/38b"><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
+
                     </div>
 
 
@@ -384,6 +396,8 @@
                         <p class="rol">Jefe de desarrollo</p>
 
                         <p class="email-white">rafvazsan@eathub.me</p>
+
+                        <p><a href="es.linkedin.com/in/sloydev"><img src="{% static 'webapp/image/linkedin-icon.png' %}"></a></p>
 
                     </div>
 
